
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/01/28 10:56:00 EST
Tag: blume-20020128-retraction
Description:

0. Retracted earlier 110.38.  (The Release_110_38 tag has been replaced
   with blume-Release_110_38-retracted.)

1. Fixed a problem with incorrect rounding modes in real64.sml.
   (Thanks to Andrew Mccreight <andrew.mccreight@yale.edu>.)

2. A bug in ml-nlffigen related to the handling of unnamed structs, unions,
   and enums fixed.  The naming of corresponding ML identifiers should 
   now be consistent again.

----------------------------------------------------------------------
Name: Allen Leung
Date: 2002/01/27 
Tag: leunga-20020127-nowhere
Description:

   Added a target called nowhere in the configuration scripts.
   Enabling this will build the MLRISC 'nowhere' tool (for translating 
   programs with where-clauses into legal SML code) during installation.  

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/01/25 21:27:00 EST
Tag: blume-Release_110_38-retracted
Description:

Call it a (working) release!  Version is 110.38. Bootfiles are ready.

README will be added later.

!!! NOTE:  Re-tagged as blume-Release_110_38-retracted. Original tag
(Release_110_38) removed.  Reason: Last-minute bug fixes.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/01/25
Tag: blume-20020125-ffi
Description:

A large number of tweaks and improvements to ml-nlffi-lib and
ml-nlffigen:

   - ML represenation types have been streamlined
   - getter and setter functions work with concrete values, not abstract